[workspace]
members = [
    # Tasks
    "puzzle",
    "bst",
    "ini",
    "polka",
    "flatmap",
    "ripgzip",
    "mpsc",
    "context",
    "stdmacro",
    "gc",
    "fswalk",
    "orm",
    "threadpool",
    "pargrep",
    "tcp_proxy",
    "babencoin",
    "crawler",
    "chat",
    "arrayvec",
    "snapshot",

    # Tools
    "tools/submit",
]
